@@ -56,9 +56,16 @@ import org.apache.druid.msq.util.MultiStageQueryContext;
 import org.apache.druid.query.DruidMetrics;
 import org.apache.druid.query.QueryContext;
 import org.apache.druid.query.aggregation.AggregatorFactory;
+import org.apache.druid.query.expression.TestExprMacroTable;
+import org.apache.druid.query.filter.NotDimFilter;
+import org.apache.druid.query.filter.NullFilter;
+import org.apache.druid.query.filter.RangeFilter;
 import org.apache.druid.segment.IndexSpec;
+import org.apache.druid.segment.VirtualColumns;
 import org.apache.druid.segment.column.ColumnType;
 import org.apache.druid.segment.column.RowSignature;
+import org.apache.druid.segment.transform.CompactionTransformSpec;
+import org.apache.druid.segment.virtual.ExpressionVirtualColumn;
 import org.apache.druid.sql.calcite.util.CalciteTests;
 import org.apache.druid.timeline.CompactionState;
 import org.apache.druid.timeline.DataSegment;
@@ -107,7 +114,7 @@ public class MSQReplaceTest extends MSQTestBase
         {PARALLEL_MERGE, PARALLEL_MERGE_MSQ_CONTEXT},
         {SUPERUSER, SUPERUSER_MSQ_CONTEXT},
         {WITH_REPLACE_LOCK_AND_COMPACTION_STATE, QUERY_CONTEXT_WITH_REPLACE_LOCK_AND_COMPACTION_STATE}
-        };
+    };
     return Arrays.asList(data);
   }
 
@@ -324,7 +331,7 @@ public class MSQReplaceTest extends MSQTestBase
                              SegmentId.of("foo", Intervals.ETERNITY, "test", 0)
                          )
                      )
-                     .setExpectedShardSpec(NumberedShardSpec.class)
+                     .setExpectedShardSpec(DimensionRangeShardSpec.class)
                      .setExpectedResultRows(
                          ImmutableList.of(
                              new Object[]{946684800000L, "", 1.0f},
@@ -343,7 +350,7 @@ public class MSQReplaceTest extends MSQTestBase
                      .setExpectedLastCompactionState(
                          expectedCompactionState(
                              context,
-                             Collections.emptyList(),
+                             List.of("v0"),
                              DimensionsSpec.builder()
                                            .setDimensions(
                                                ImmutableList.of(
@@ -353,13 +360,24 @@ public class MSQReplaceTest extends MSQTestBase
                                            )
                                            .setDimensionExclusions(Collections.singletonList("__time"))
                                            .build(),
+                             new CompactionTransformSpec(
+                                 null,
+                                 VirtualColumns.create(
+                                     new ExpressionVirtualColumn(
+                                         "v0",
+                                         "lower(\"dim1\")",
+                                         ColumnType.STRING,
+                                         TestExprMacroTable.INSTANCE
+                                     )
+                                 )
+                             ),
                              GranularityType.ALL,
                              Intervals.ETERNITY
                          )
                      )
                      .verifyResults();
   }
-
+  
   @MethodSource("data")
   @ParameterizedTest(name = "{index}:with context {0}")
   public void testReplaceOnFooWithAllClusteredByExpression(String contextName, Map<String, Object> context)
@@ -1012,7 +1030,11 @@ public class MSQReplaceTest extends MSQTestBase
                              Collections.emptyList(),
                              Collections.singletonList(new StringDimensionSchema("user")),
                              GranularityType.HOUR,
-                             Intervals.of("2016-06-27T01:00:00.000Z/2016-06-27T02:00:00.000Z")
+                             Intervals.of("2016-06-27T01:00:00.000Z/2016-06-27T02:00:00.000Z"),
+                             new CompactionTransformSpec(
+                                 new RangeFilter("v0", ColumnType.LONG, 1466989200000L, 1466992800000L, false, true, null),
+                                 null
+                             )
                          )
                      )
                      .verifyResults();
@@ -1727,7 +1749,8 @@ public class MSQReplaceTest extends MSQTestBase
                                  new LongDimensionSchema("cnt")
                              ),
                              GranularityType.DAY,
-                             Intervals.ETERNITY
+                             Intervals.ETERNITY,
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                          )
                      )
                      .verifyResults();
@@ -2197,7 +2220,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.QUARTER,
-                         Intervals.of("2000-01-01T00:00:00.000Z/2002-01-01T00:00:00.000Z")
+                         Intervals.of("2000-01-01T00:00:00.000Z/2002-01-01T00:00:00.000Z"),
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2277,7 +2301,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.DAY,
-                         Intervals.ETERNITY
+                         Intervals.ETERNITY,
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2323,7 +2348,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.HOUR,
-                         Intervals.of("2016-06-27T01:00:00/2016-06-27T02:00:00")
+                         Intervals.of("2016-06-27T01:00:00/2016-06-27T02:00:00"),
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2371,7 +2397,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.DAY,
-                         Intervals.of("2016-06-29T00:00:00.000Z/2016-07-03T00:00:00.000Z")
+                         Intervals.of("2016-06-29T00:00:00.000Z/2016-07-03T00:00:00.000Z"),
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2419,7 +2446,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.DAY,
-                         Intervals.of("2016-05-25T00:00:00.000Z/2016-06-03T00:00:00.000Z")
+                         Intervals.of("2016-05-25T00:00:00.000Z/2016-06-03T00:00:00.000Z"),
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2467,7 +2495,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.DAY,
-                         Intervals.ETERNITY
+                         Intervals.ETERNITY,
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2513,7 +2542,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.ALL,
-                         Intervals.ETERNITY
+                         Intervals.ETERNITY,
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2559,7 +2589,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.ALL,
-                         Intervals.ETERNITY
+                         Intervals.ETERNITY,
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2596,12 +2627,10 @@ public class MSQReplaceTest extends MSQTestBase
                      .setExpectedLastCompactionState(expectedCompactionState(
                          context,
                          Collections.emptyList(),
-                         ImmutableList.of(
-                             new StringDimensionSchema("dim1"),
-                             new LongDimensionSchema("cnt")
-                         ),
+                         List.of(new StringDimensionSchema("dim1"), new LongDimensionSchema("cnt")),
                          GranularityType.ALL,
-                         Intervals.ETERNITY
+                         Intervals.ETERNITY,
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2671,7 +2700,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.DAY,
-                         Intervals.of("2016-06-01T00:00:00.000Z/2016-06-03T00:00:00.000Z")
+                         Intervals.of("2016-06-01T00:00:00.000Z/2016-06-03T00:00:00.000Z"),
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)), null)
                      ))
                      .verifyResults();
   }
@@ -2776,6 +2806,44 @@ public class MSQReplaceTest extends MSQTestBase
       List<String> partitionDimensions,
       List<DimensionSchema> dimensions,
       GranularityType segmentGranularity,
+      Interval interval,
+      CompactionTransformSpec transformSpec
+  )
+  {
+    CompactionState state = expectedCompactionState(
+        context,
+        partitionDimensions,
+        dimensions,
+        segmentGranularity,
+        interval
+    );
+    return state == null ? null : state.toBuilder().transformSpec(transformSpec).build();
+  }
+
+  private CompactionState expectedCompactionState(
+      Map<String, Object> context,
+      List<String> partitionDimensions,
+      List<DimensionSchema> dimensions,
+      GranularityType segmentGranularity,
+      Interval interval
+  )
+  {
+    return expectedCompactionState(
+        context,
+        partitionDimensions,
+        dimensions,
+        null,
+        segmentGranularity,
+        interval
+    );
+  }
+
+  private CompactionState expectedCompactionState(
+      Map<String, Object> context,
+      List<String> partitionDimensions,
+      List<DimensionSchema> dimensions,
+      CompactionTransformSpec transformSpec,
+      GranularityType segmentGranularity,
       Interval interval
   )
   {
@@ -2786,6 +2854,7 @@ public class MSQReplaceTest extends MSQTestBase
                       .setDimensions(dimensions)
                       .setDimensionExclusions(Collections.singletonList("__time"))
                       .build(),
+        transformSpec,
         segmentGranularity,
         interval
     );
@@ -2795,6 +2864,25 @@ public class MSQReplaceTest extends MSQTestBase
       Map<String, Object> context,
       List<String> partitionDimensions,
       DimensionsSpec dimensionsSpec,
+      GranularityType segmentGranularity,
+      Interval interval
+  )
+  {
+    return expectedCompactionState(
+        context,
+        partitionDimensions,
+        dimensionsSpec,
+        null,
+        segmentGranularity,
+        interval
+    );
+  }
+
+  private CompactionState expectedCompactionState(
+      Map<String, Object> context,
+      List<String> partitionDimensions,
+      DimensionsSpec dimensionsSpec,
+      CompactionTransformSpec transformSpec,
       GranularityType segmentGranularity,
       Interval interval
   )
@@ -2831,7 +2919,7 @@ public class MSQReplaceTest extends MSQTestBase
         partitionsSpec,
         dimensionsSpec,
         metricsSpec,
-        null,
+        transformSpec,
         indexSpec,
         granularitySpec,
         null
